...
import java.time.format.DateTimeFormatter
import java.util.Locale

const val TAG_PUBLICATIONS: String = "home_publications"
const val TAG_HOME_SEARCH_COUNT: String = "home_search_count"
const val TAG_HOME_NO_RESULTS: String = "home_no_results"
const val TAG_HOME_SEARCH_GLOBALLY: String = "home_search_globally"

@Composable
@Suppress("LongParameterList")
fun HomeScreen(
    sections: List<BocSection>,
    onOpenSections: () -> Unit,
...
