...
import com.jrblanco.boccantabria.R
import com.jrblanco.boccantabria.core.ui.theme.BocTheme
import com.jrblanco.boccantabria.core.ui.theme.sectionColor
import com.jrblanco.boccantabria.domain.model.BocSection
import com.jrblanco.boccantabria.domain.model.Publication

const val TAG_DETAIL_HEADER: String = "detail_header"
const val TAG_DETAIL_SECTION: String = "detail_section"
const val TAG_DETAIL_TITLE: String = "detail_title"
const val TAG_DETAIL_ISSUER: String = "detail_issuer"
const val TAG_DETAIL_DATE: String = "detail_date"
const val TAG_DETAIL_OFFICIAL_BADGE: String = "detail_official_badge"

...
