...
import com.jrblanco.boccantabria.ui.detail.component.DocumentHeader
import com.jrblanco.boccantabria.ui.detail.component.DocumentTab
import com.jrblanco.boccantabria.ui.share.ShareState
import java.time.format.DateTimeFormatter
import java.util.Locale

const val TAG_DETAIL_BACK: String = "detail_back"
const val TAG_DETAIL_SAVE: String = "detail_save"
const val TAG_DETAIL_SHARE: String = "detail_share"
const val TAG_DETAIL_MISSING: String = "detail_missing"
const val TAG_DETAIL_LIST: String = "detail_list"

/**
...
